--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Binary artifacts
-/redcap-riskservice
+/multifactorriskservice
 /mock/mock
 
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
