--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Binary artifacts
 /multifactorriskservice
+/mock-service
 /mock/mock
 
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
